--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,23 @@
 = svUnit News
 
+== svUnit 0.7-3
+
+* Loading of svUnit sometimes failed during checking of the SciViews-K Unit
+  plugin installation in Komodo Edit/IDE. Corrected. Thanks Claudia Beleites.
+  
+* The unitTest.svUnit man page now uses require(svUnit) in a mechanism that
+  ignores the tests in case svUnit is not installed in a machine where R CMD
+  check is run.
+  
+* errorLog() now briefly reports statistics on all test run when used in
+  interactive() mode. This is more appropriate when the tests are run by using
+  example(unitTests.<mypackage>), while it does not change original behaviour
+  (silent execution of the tests, except in case of failure or error) during
+  the R CMD check process.
+  
+* The package vignette is updated to reflect these changes.
+
+
 == svUnit 0.7-2
 
 * Added a unitname argument in runTest.svSuite() to select one test unit
